erDiagram
    Member {
        int member_id PK
        string member_name
        int phone
    }

    Borrow {
        int borrow_id PK
        datetime borrow_date
        int member_id FK
        int book_id FK

    }

    Book {
        int book_id PK
        string title
        string author
        int ISBN_nr
        int copy_nr
    }

    Member ||--o{ Borrow : "Member can borrow"
    Borrow }o--|{ Book : "A book can be captured in a borrow record"